Add email verification screen and fix Google Sign-In for web platform

--- a/web/index.html
+++ b/web/index.html
@@ -29,10 +29,37 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>faminga_irrigation</title>
+  <title>Faminga Irrigation</title>
   <link rel="manifest" href="manifest.json">
+  
+  <!-- Google Sign-In -->
+  <meta name="google-signin-client_id" content="YOUR_WEB_CLIENT_ID.apps.googleusercontent.com">
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
+  <!-- Loading indicator -->
+  <div id="loading" style="display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #FFF5EA;">
+    <div style="text-align: center;">
+      <div style="width: 80px; height: 80px; background-color: #D47B0F; border-radius: 20px; margin: 0 auto 20px; display: flex; align-items: center; justify-content: center;">
+        <div style="width: 40px; height: 40px; border: 4px solid #FFFFFF; border-top-color: transparent; border-radius: 50%; animation: spin 1s linear infinite;"></div>
+      </div>
+      <p style="color: #2D4D31; font-family: system-ui; font-size: 18px; font-weight: 600;">Loading Faminga Irrigation...</p>
+    </div>
+  </div>
+  <style>
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+  </style>
+  <script>
+    window.addEventListener('flutter-first-frame', function () {
+      var loading = document.getElementById('loading');
+      if (loading) {
+        loading.style.display = 'none';
+      }
+    });
+  </script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
