--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,10 @@
   <title>Faminga Irrigation</title>
   <link rel="manifest" href="manifest.json">
   
+  <!-- Google Maps API key for web (required by google_maps_flutter_web) -->
+  <!-- TODO: Replace with your real Maps API key and restrict it -->
+  <meta name="google_maps_api_key" content="REPLACE_WITH_YOUR_GOOGLE_MAPS_API_KEY">
+  
   <!-- Google Sign-In -->
   <meta name="google-signin-client_id" content="YOUR_WEB_CLIENT_ID.apps.googleusercontent.com">
   <script src="https://accounts.google.com/gsi/client" async defer></script>
