--- a/web/index.html
+++ b/web/index.html
@@ -31,16 +31,15 @@
 
   <title>Faminga Irrigation</title>
   <link rel="manifest" href="manifest.json">
-  
-  <!-- Google Maps API key for web (required by google_maps_flutter_web) -->
-  <!-- TODO: Replace with your real Maps API key and restrict it -->
-  <meta name="google_maps_api_key" content="REPLACE_WITH_YOUR_GOOGLE_MAPS_API_KEY">
+</head>
+<body>
+  <!-- Google Maps JavaScript API - Load BEFORE Flutter -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgsYvpfGIjDQnjYFmg6WyJm22cVEc-g2o"></script>
   
   <!-- Google Sign-In -->
   <meta name="google-signin-client_id" content="YOUR_WEB_CLIENT_ID.apps.googleusercontent.com">
   <script src="https://accounts.google.com/gsi/client" async defer></script>
-</head>
-<body>
+  
   <!-- Loading indicator -->
   <div id="loading" style="display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #FFF5EA;">
     <div style="text-align: center;">
